agregué link de wsp al boton contactar

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </svg>
                 <p>Mendoza, Argentina.</p>
             </div><!-- .ubicacion -->
-            <a class="boton" href="#">Contactar</a>
+            <a class="boton" href="https://wa.link/faepnf">Contactar</a>
         </div><!-- .contenido-hero -->
     </section><!-- .hero -->
 
