Cambio en los parrafos de Mis Servicios

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                         <path d="M12 4a2 2 0 0 0 2 -2a2 2 0 0 0 -2 2" />
                     </svg>
                 </div>
-                <p>Me especializo en el desarrollo de aplicaciones web, destacando por mi capacidad para unir
-                    funcionalidad y diseño de manera armoniosa. Cada proyecto se convierte en una solución digital única
-                    que equilibra la estética y la usabilidad, proporcionando una experiencia de usuario excepcional.
+                <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+                    Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in
+                    their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
                 </p>
             </section>
             <section class="servicio">
@@ -108,9 +108,10 @@
                         <path d="M11 15l2 0" />
                     </svg>
                 </div>
-                <p>Me destaco en el ámbito del e-commerce al crear soluciones digitales que fusionan la funcionalidad y
-                    el diseño. Cada proyecto representa una plataforma de comercio electrónico única, donde se equilibra
-                    la estética y la usabilidad para ofrecer una experiencia de compra en línea excepcional.</p>
+                <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+                    Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in
+                    their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
+                </p>
             </section>
         </div><!-- .servicios -->
 
