--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="preload" href="./css/main.css" as="style">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>Document</title>
+    <title>Ramiro Verrecchia</title>
 </head>
 
 <body>
